fix word-wrap

--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -967,6 +967,7 @@
         }
       }
       .title {
+        word-break: break-all;
         font-size: 50px;
         line-height: 109.3%;
         text-align: center;
